--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio | Will Salomon</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -11,43 +11,51 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Will Salomon</a>
       <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">index</a>
+            </li>
+          </ul>
       </nav>
     </div>
   </header>
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Portfolio</h1>
+      <h1>The Boys</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        <img src="assets/images/Trey.jpg" alt="Daddy">
         
-        <h3>Word Guess</h3>
+        <h3>Trey</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/Mike.jpg" alt="Mikey Boy">
 
-        <h3>RPG Game</h3>
+        <h3>Mike</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/Page.jpg" alt="Sweet Page">
 
-        <h3>Trivia Game</h3>
+        <h3>Page</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="assets/images/Fish.jpg" alt="Jon Fishman">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Jon</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/Timewarp.jpg" alt="Phish Time Machine">
 
-        <h3>Rock Paper Scissors</h3>
+        <h3>MSG NYE</h3>
       </div>
 
     </section>
