--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>The Boys</h1>
+      <h1>The Phish From Vermont</h1>
 
       <div class="work">
         <img src="assets/images/Trey.jpg" alt="Daddy">
