--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact | Will Salomon</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -15,13 +16,16 @@
       <nav>
         <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link active" href="portfolio.html">Portfolio</a>
+              <a class="nav-link active">
+                <a href="portfolio.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link">
+                <a href="contact.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">index</a>
+              <a class="nav-link">
+                <a href="index.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">index</a>
             </li>
           </ul>
       </nav>
@@ -35,7 +39,7 @@
         <ul>
           <li>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+            <input type="text" id="name" name="name" placeholder="Your Name" required="required">
           </li>
           <li>
             <label for="email">Email</label>
