--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About | Will Salomon</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -16,13 +17,15 @@
       <nav>
         <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                <a href="portfolio.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link">
+
+                  <a href="contact.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">index</a>
+                <a href="index.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">index</a>
             </li>
           </ul>
       </nav>
